Added missing translations :fr

--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -29,7 +29,7 @@ fr:
       search: "Recherche"
       select: "Sélectionner un(e) %{name} pour modification"
       show_all: "Afficher tout"
-      add_filter: "Add filter"
+      add_filter: "Ajouter un filtre"
     new:
       basic_info: "INFO DE BASE"
       required: "Obligatoire"
@@ -88,12 +88,13 @@ fr:
       export: "export"
       exported: "exporté(e)"
     breadcrumbs:
-      delete: "delete"
-      history: "history"
-      edit: "edit"
+      delete: "suppression"
+      show: "voir"
+      history: "historique"
+      edit: "édition"
       export: "export"
-      bulk_destroy: "delete"
-      new: "new"
-      model_history: "history"
-      list: "list"
-      dashboard: "dashboard"
+      bulk_destroy: "suppression"
+      new: "nouveau"
+      model_history: "historique"
+      list: "liste"
+      dashboard: "tableau de bord"
