--- a/config/locales/rails_admin.fi.yml
+++ b/config/locales/rails_admin.fi.yml
@@ -15,8 +15,12 @@ fi:
       ago: "sitten"
     history:
       name: "Historia"
-      page_name: "Historia kohteelle %{name}"
+      page_name: "Kohteen %{name} historia"
       no_activity: "Ei tapahtumia"
+    show:
+      show_in_app: "Näytä sovelluksessa"
+      page_name: "Kohteen %{name} tiedot"
+      no_file_found: "Tiedostoa ei löytynyt"
     credentials:
       log_out: "Kirjaudu ulos"
     list:
@@ -25,6 +29,7 @@ fi:
       select_action: "Valitse"
       delete_selected: "Poista valitut"
       export_action: "Vie nykyinen näkymä"
+      show_action: "Näytä"
       export_selected: "Vie valitut"
       add_new: "Lisää uusi"
       search: "Haku"
@@ -84,12 +89,13 @@ fi:
       export: "vie"
       exported: "viety"
     breadcrumbs:
-      delete: "delete"
-      history: "history"
-      edit: "edit"
-      export: "export"
-      bulk_destroy: "delete"
-      new: "new"
-      model_history: "history"
-      list: "list"
-      dashboard: "dashboard"
+      delete: "poista"
+      history: "historia"
+      show: "näytä"
+      edit: "muokkaa"
+      export: "vie"
+      bulk_destroy: "poista"
+      new: "luo uusi"
+      model_history: "historia"
+      list: "listaa"
+      dashboard: "hallintapaneeli"
