--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -18,6 +18,11 @@ pt-PT:
     history:
       name: "Histórico"
       page_name: "Histórico de %{name}"
+      no_activity: "Sem actividade"
+    show:
+      show_in_app: "Mostrar na aplicação"
+      page_name: "Detalhes de %{name}"
+      no_file_found: "Ficheiro não encontrado"
     credentials:
       log_out: "Terminar sessão"
     list:
@@ -25,6 +30,7 @@ pt-PT:
       delete_action: "Remover"
       select_action: "Select"
       export_action: "Export current view"
+      show_action: "Exportar"
       export_selected: "Export selected"
       delete_selected: "Delete selected"
       add_new: "Adicionar"
@@ -87,6 +93,7 @@ pt-PT:
     breadcrumbs:
       delete: "deletar"
       history: "história"
+      show: "mostrar"
       edit: "editar"
       export: "exportar"
       bulk_destroy: "deletar"
