--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -55,12 +55,12 @@ fr:
       all_of_the_following_related_items_will_be_deleted: " ? Tous les éléments suivants seront supprimés : "
       are_you_sure_you_want_to_delete_the_object: "Êtes-vous sûr de vouloir supprimer les éléments suivants : %{model_name}"
       confirmation: "Oui, je suis sûr(e)"
-      delete_confirmation: "Delete confirmation"
+      delete_confirmation: "Confirmation de suppression"
     export:
       confirmation: "Exporter en %{name}"
       select: "Sélectionner les champs à exporter"
-      fields_from: "Champs pour %{name}"
-      fields_from_associated: "Champs pour l'association %{name}"
+      fields_from: "Champs pour '%{name}'"
+      fields_from_associated: "Champs pour l'association '%{name}'"
       display: "Afficher %{name} : %{type}"
       options_for: "Options pour %{name}"
       empty_value_for_associated_objects: "<vide>"
