Add missing translation 'pt-BR.admin.list.show_action'

--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -22,6 +22,7 @@ pt-BR:
     credentials:
       log_out: "Desconectar"
     list:
+      show_action: "Ver"
       edit_action: "Alterar"
       delete_action: "Excluir"
       export_action: "Exportar tela corrente"
