some love for bulk_delete/delete

--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -56,6 +56,7 @@ es:
       are_you_sure_you_want_to_delete_the_object: "Estás seguro que quieres borrar %{model_name}"
       confirmation: "Sí, estoy seguro"
       delete_confirmation: "Confirmación de Borrado"
+      bulk_delete: "The following objects will be deleted, which may delete or orphan some of their related dependencies:"
     export:
       confirmation: "Exportar a %{name}"
       select: "Selecciona los campos a exportar"
