--- a/config/locales/rails_admin.zh-CN.yml
+++ b/config/locales/rails_admin.zh-CN.yml
@@ -4,7 +4,7 @@ zh-CN:
   admin:
     dashboard:
       pagename: "网站管理"
-      name: "Dashboard"
+      name: "首页"
       model_name: "模型名称"
       last_used: "最后使用"
       records: "记录"
@@ -16,20 +16,25 @@ zh-CN:
       name: "历史"
       page_name: "%{name}的历史"
       no_activity: "非激活"
+    show:
+      show_in_app: "在app中显示"
+      page_name: "%{name}的详细内容"
+      no_file_found: "没有找到文件"
     credentials:
       log_out: "登出"
     list:
       edit_action: "编辑"
       delete_action: "删除"
       select_action: "选择"
-      delete_selected: "删除已选择的"
       export_action: "导出当前页面"
+      show_action: "显示"
       export_selected: "导出选择记录"
+      delete_selected: "删除已选择的"      
       add_new: "添加"
       search: "搜索"
       select: "%{name}编辑"
       show_all: "查看全部"
-      add_filter: "Add filter"
+      add_filter: "添加filter"
     new:
       basic_info: "基本信息"
       required: "必须"
@@ -40,38 +45,38 @@ zh-CN:
       select_choice: "选择并点击"
       chose_all: "选择全部"
       clear_all: "取消全部"
+      up: "上移"
+      down: "下移"
       save: "保存"
       save_and_add_another: "保存并添加新的"
       save_and_edit: "保存并再编辑"
       cancel: "取消"
-      up: "上移"
-      down: "下移"
     edit:
       add_new_associated_model_name: "添加新的%{name}"
     delete:
-      all_of_the_following_related_items_will_be_deleted: "? All of the following related items will be deleted:"
-      are_you_sure_you_want_to_delete_the_object: "Are you sure you want to delete the %{model_name}"
+      all_of_the_following_related_items_will_be_deleted: "? 所有下面相关的内容将被删除:"
+      are_you_sure_you_want_to_delete_the_object: "你确定要删除 %{model_name}吗"
       confirmation: "是的，我确定"
-      delete_confirmation: "Delete confirmation"
-      bulk_delete: "The following objects will be deleted, which may delete or orphan some of their related dependencies:"
+      delete_confirmation: "确认删除"
+      bulk_delete: "下面的对象将被删除，并可能会删除和它们依赖的对象:"
     export:
-      confirmation: "Export to %{name}"
+      confirmation: "导出为 %{name}"
       select: "选择需要导出的字段"
-      fields_from: "Fields from %{name}"
-      fields_from_associated: "Fields from associated %{name}"
-      display: "Display %{name}: %{type}"
-      options_for: "Options for %{name}"
+      fields_from: "来自字段 %{name}"
+      fields_from_associated: "来自相关字段 %{name}"
+      display: "显示 %{name}: %{type}"
+      options_for: "%{name}的选项"
       empty_value_for_associated_objects: "<empty>"
       csv:
         header_for_root_methods: "%{name}" # 'model' is available
         header_for_association_methods: "%{name} [%{association}]"
-        encoding_to: "Encode to"
-        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
-        skip_header: "No header"
-        skip_header_help: "Do not output a header (no fields description)"
+        encoding_to: "编码到"
+        encoding_to_help: "选择输出编码。输入空讲保留目前的输入编码: (%{name})"
+        skip_header: "没有头信息"
+        skip_header_help: "不要输出头信息（无字段描述）"
         default_col_sep: ","
-        col_sep: "Column separator"
-        col_sep_help: "Leave blank for default ('%{value}')" # value is default_col_sep
+        col_sep: "栏目分隔"
+        col_sep_help: "默认选空('%{value}')" # value is default_col_sep
     flash:
       successful: "%{name} %{action}成功"
       error: "%{name} %{action}失败"
@@ -86,15 +91,16 @@ zh-CN:
       export: "导出"
       exported: "已导出"
     breadcrumbs:
-      delete: "delete"
-      history: "history"
-      edit: "edit"
-      export: "export"
-      bulk_destroy: "delete"
-      new: "new"
-      model_history: "history"
-      list: "list"
-      dashboard: "dashboard"
+      delete: "删除"
+      history: "历史"
+      show: "显示"
+      edit: "编辑"
+      export: "导出"
+      bulk_destroy: "删除"
+      new: "新建"
+      model_history: "历史"
+      list: "列表"
+      dashboard: "首页"
   datetime:
     distance_in_words:
       x_days: "%{count}天"
