--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -29,13 +29,16 @@ en:
     list:
       edit_action: "Edit"
       delete_action: "Delete"
+      selected: "Selected"
       select_action: "Select"
-      export_action: "Export current view"
+      export_action: 'Export'
+      export_current_action: "Export current view"
       show_action: "Show"
-      export_selected: "Export selected"
-      delete_selected: "Delete selected"
+      export_selected: "Export"
+      delete_selected: "Delete"
       add_new: "Add new"
       search: "Search"
+      refresh: "Refresh"
       select: "Select %{name} to edit"
       show_all: "Show all"
       add_filter: "Add filter"
@@ -69,6 +72,7 @@ en:
       display: "Display %{name}: %{type}"
       options_for: "Options for %{name}"
       empty_value_for_associated_objects: "<empty>"
+      click_to_reverse_selection: 'Click to reverse selection'
       csv:
         header_for_root_methods: "%{name}" # 'model' is available
         header_for_association_methods: "%{name} [%{association}]"
