moved :list action to :index moved :index action to :dashboard
This was driving me nuts.

--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -20,7 +20,7 @@ bg:
       no_activity: "Липса на активност"
     credentials:
       log_out: "Изход"
-    list:
+    index:
       edit_action: "Редактирай"
       delete_action: "Изтрий"
       select_action: "Избери"
@@ -95,5 +95,5 @@ bg:
       bulk_destroy: "заличи"
       new: "нов"
       model_history: "история"
-      list: "списък"
+      index: "списък"
       dashboard: "табло"
