--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -25,7 +25,7 @@ ru:
       no_file_found: "Файл не найден"
     credentials:
       log_out: "Выйти"
-    list:
+    index:
       edit_action: "Редактировать"
       delete_action: "Удалить"
       select_action: "Выбрать"
@@ -100,5 +100,5 @@ ru:
       bulk_destroy: "удаление"
       new: "создание"
       model_history: "история"
-      list: "список"
+      index: "список"
       dashboard: "панель"
