--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -88,12 +88,12 @@ bg:
       exported: "изнасяне"
     breadcrumbs:
       delete: "заличи"
-      history: "история"
+      for_object: "история"
       show: "покажи"
       edit: "редактирай"
       export: "изнеси"
       bulk_destroy: "заличи"
       new: "нов"
-      model_history: "история"
+      for_model: "история"
       index: "списък"
       dashboard: "табло"
