--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -94,12 +94,12 @@ de:
       exported: "exportiert"
     breadcrumbs:
       delete: "löschen"
-      history: "historie"
+      for_object: "historie"
       show: "anzeigen"
       edit: "bearbeiten"
       export: "exportieren"
       bulk_destroy: "löschen"
       new: "neu"
-      model_history: "Historie"
+      for_model: "Historie"
       index: "Liste"
       dashboard: "Übersicht"
