--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -90,12 +90,12 @@ es:
       exported: "exportado"
     breadcrumbs:
       delete: "borrar"
-      history: "historial"
+      for_object: "historial"
       edit: "editar"
       export: "exportar"
       show: "mostrar"
       bulk_destroy: "borrar"
       new: "nuevo"
-      model_history: "historial"
+      for_model: "historial"
       index: "lista"
       dashboard: "panel general"
