--- a/config/locales/rails_admin.fi.yml
+++ b/config/locales/rails_admin.fi.yml
@@ -91,12 +91,12 @@ fi:
       exported: "viety"
     breadcrumbs:
       delete: "poista"
-      history: "historia"
+      for_object: "historia"
       show: "näytä"
       edit: "muokkaa"
       export: "vie"
       bulk_destroy: "poista"
       new: "luo uusi"
-      model_history: "historia"
+      for_model: "historia"
       index: "listaa"
       dashboard: "hallintapaneeli"
