--- a/config/locales/rails_admin.it.yml
+++ b/config/locales/rails_admin.it.yml
@@ -93,12 +93,12 @@ it:
       exported: "esportato"
     breadcrumbs:
       delete: "elimina"
-      history: "cronologia"
+      for_object: "cronologia"
       show: "mostra"
       edit: "modifica"
       export: "esporta"
       bulk_destroy: "elimina"
       new: "nuovo"
-      model_history: "cronologia"
+      for_model: "cronologia"
       index: "elenco"
       dashboard: "riepilogo"
