--- a/config/locales/rails_admin.nb.yml
+++ b/config/locales/rails_admin.nb.yml
@@ -94,12 +94,12 @@ nb:
       exported: "eksportert"
     breadcrumbs:
       delete: "slette"
-      history: "historikk"
+      for_object: "historikk"
       show: "vise"
       edit: "redigere"
       export: "eksportere"
       bulk_destroy: "slette"
       new: "ny"
-      model_history: "historikk"
+      for_model: "historikk"
       index: "liste"
       dashboard: "dashboard"
