--- a/config/locales/rails_admin.pl.yml
+++ b/config/locales/rails_admin.pl.yml
@@ -95,12 +95,12 @@ pl:
     breadcrumbs:
       show: "pokaż"
       delete: "usuń"
-      history: "historia"
+      for_object: "historia"
       edit: "edytuj"
       export: "eksportuj"
       bulk_destroy: "usuń"
       new: "nowy"
-      model_history: "historia"
+      for_model: "historia"
       index: "lista"
       dashboard: "tablica"
       
