--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -93,12 +93,12 @@ pt-BR:
       exported: "exportado"
     breadcrumbs:
       delete: "deletar"
-      history: "história"
+      for_object: "história"
       show: "visualizar"
       edit: "editar"
       export: "exportar"
       bulk_destroy: "deletar"
       new: "novo"
-      model_history: "história"
+      for_model: "história"
       index: "listar"
       dashboard: "administração"
