--- a/config/locales/rails_admin.ro.yml
+++ b/config/locales/rails_admin.ro.yml
@@ -97,12 +97,12 @@ ro:
       exported: "exportat(ă)"
     breadcrumbs:
       delete: "șterge"
-      history: "istoric"
+      for_object: "istoric"
       show: "arată"
       edit: "modifică"
       export: "exportă"
       bulk_destroy: "șterge"
       new: "nou"
-      model_history: "istoric"
+      for_model: "istoric"
       index: "listează"
       dashboard: "tablou"
