--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -93,12 +93,12 @@ ru:
       exported: "экспортировано"
     breadcrumbs:
       delete: "удаление"
-      history: "история"
+      for_object: "история"
       show: "просмотр"
       edit: "редактирование"
       export: "экспорт"
       bulk_destroy: "удаление"
       new: "создание"
-      model_history: "история"
+      for_model: "история"
       index: "список"
       dashboard: "панель"
