--- a/config/locales/rails_admin.zh-CN.yml
+++ b/config/locales/rails_admin.zh-CN.yml
@@ -93,13 +93,13 @@ zh-CN:
       exported: "已导出"
     breadcrumbs:
       delete: "删除"
-      history: "历史"
+      for_object: "历史"
       show: "显示"
       edit: "编辑"
       export: "导出"
       bulk_destroy: "删除"
       new: "新建"
-      model_history: "历史"
+      for_model: "历史"
       index: "列表"
       dashboard: "首页"
   datetime:
