all hail kaminari! removes custom pagination next sucker most likely to go out: history

--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -3,6 +3,11 @@
 bg:
   home:
     name: "начало"
+  views:
+    pagination:
+      previous: "&laquo; Prev"
+      next: "Next &raquo;"
+      truncate: "..."
   admin:
     dashboard:
       pagename: "Администрация"
