--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -1,6 +1,11 @@
 fr:
   home:
     name: "Home"
+  views:
+    pagination:
+      previous: "&laquo; Préc."
+      next: "Suivant &raquo;"
+      truncate: "..."
   admin:
     dashboard:
       pagename: "Administration"
