--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -4,6 +4,11 @@
 pt-PT:
   home:
     name: "home"
+  views:
+    pagination:
+      previous: "&laquo; Prev"
+      next: "Next &raquo;"
+      truncate: "..."
   admin:
     dashboard:
       pagename: "Administração do site"
