--- a/config/locales/rails_admin.tr.yml
+++ b/config/locales/rails_admin.tr.yml
@@ -4,6 +4,11 @@
 tr:
   home:
     name: "anasayfa"
+  views:
+    pagination:
+      previous: "&laquo; Prev"
+      next: "Next &raquo;"
+      truncate: "..."
   admin:
     dashboard:
       pagename: "Site Yönetimi"
