--- a/config/locales/rails_admin.it.yml
+++ b/config/locales/rails_admin.it.yml
@@ -4,6 +4,11 @@
 it:
   home:
     name: "home"
+  views:
+    pagination:
+      previous: "&laquo; Prev"
+      next: "Next &raquo;"
+      truncate: "..."
   admin:
     dashboard:
       pagename: "Amministrazione sito"
