--- a/config/locales/rails_admin.nb.yml
+++ b/config/locales/rails_admin.nb.yml
@@ -9,7 +9,7 @@ nb:
     pagination:
       previous: "&laquo; Prev"
       next: "Next &raquo;"
-      truncate: "..."
+      truncate: "…"
   admin:
     dashboard:
       pagename: "Sideadministrasjon"
