--- a/config/locales/rails_admin.pl.yml
+++ b/config/locales/rails_admin.pl.yml
@@ -8,7 +8,7 @@ pl:
     pagination:
       previous: "&laquo; Prev"
       next: "Next &raquo;"
-      truncate: "..."
+      truncate: "…"
   admin:
     dashboard:
       pagename: "Panel administracyjny"
