--- a/config/locales/rails_admin.ro.yml
+++ b/config/locales/rails_admin.ro.yml
@@ -12,7 +12,7 @@ ro:
     pagination:
       previous: "&laquo; Prev"
       next: "Next &raquo;"
-      truncate: "..."
+      truncate: "…"
   admin:
     dashboard:
       pagename: "Administrare"
