--- a/config/locales/rails_admin.mn.yml
+++ b/config/locales/rails_admin.mn.yml
@@ -8,7 +8,7 @@ mn:
     pagination:
       previous: "&laquo; Prev"
       next: "Next &raquo;"
-      truncate: "..."
+      truncate: "…"
   admin:
     dashboard:
       pagename: "Сайтын удирдлага"
